how to run main.java:
do comment